k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agorasoftadmin-backend
  namespace: agorasoftadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agorasoftadmin-backend
  template:
    metadata:
      labels:
        app: agorasoftadmin-backend
    spec:
      nodeSelector:
        agorasoftadmin: "true"
      imagePullSecrets:
        - name: ghcr-creds
      containers:
        - name: backend
          image: ghcr.io/arquitecturasoftware-imagicode/agorasoftadmin-backend:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            # periodSeconds y failureThreshold abajo
            periodSeconds: 20
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
