k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: agorasoftadmin-frontend
  namespace: agorasoftadmin
spec:
  selector:
    app: agorasoftadmin-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
