k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agorasoftadmin-ingress
  namespace: agorasoftadmin
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: agorasoftadmin-backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: agorasoftadmin-frontend
                port:
                  number: 80
